--- a/CastilloPostal.html
+++ b/CastilloPostal.html
@@ -7,14 +7,16 @@
                 <div id=DIV1>
                     <div id=DIV2>
                         <img src="img/Lagartilandia.jpg">
-                        <p> From:                 To: Elmer B.</p>
+                        <H2> From:XXXXXX   To: Elmer B.</H2>
                     </div>
                     <div id=DIV3>
                         <p>
                             El Castillo de Santa Catalina se alza sobre uno de los parajes más espectaculares de la provincia de Jaén, es una maravilla local.
+                            La construcción visible actual es de origen cristiano, siendo erigida tras la conquista de la ciudad por Fernando III el Santo en 1246.
                         </p>
                         <p>
-                            Pasear por sus pasillos y merendar en las tierras cercanas es una experiencia inolvidable.
+                            Pasear por sus pasillos y merendar en las tierras cercanas es una experiencia inolvidable. De hecho la gente de Jaén se reune tradicionalmente una vez al año para comer junto
+                            al castillo. ¿Te apuntas a la proxima?
                         </p>
                     </div>
                     </div>
