--- a/Reto104.html
+++ b/Reto104.html
@@ -26,7 +26,7 @@
             <section id="about">
                <h2>Sobre Naruto</h2>
                <img
-                  src="https://assets.stickpng.com/images/5852cd7658215f0354495f6a.png"
+                  src="img/5852cd7658215f0354495f6a (1).png"
                   alt="Naruto Uzumaki"
                   />
                <p>
