--- a/RetoGatos.html
+++ b/RetoGatos.html
@@ -13,11 +13,13 @@
             <p>😸 Haz click aquí para ver más fotos de <a href="img/8bstclwxjnz21.jpg">gatetes</a>.</p>
             <img src="img/gatonaranja.png" alt="Un gato naranja tumbado" />
             <h3>😻 Likes gatunos:</h3>
-            <ul>
+            <div class="menu">
+                <ul>
                 <li class="like">Hierba gatuna</li>
                 <li class="like">Punteros laser</li>
                 <li class="like">Lasaña</li>
             </ul>
+        </div>
             <h3>😾 Top 3 dislikes gatunos:</h3>
             <ol>
                 <li>Agua</li>
